tests/init_state/move_and_drop/hll_defer_move_and_drop.si
struct Box: Drop + Move { val: i64 }
struct CopyBox: Copy + Drop { val: i64 }

# ---------- INIT-UseAfterMove: deferred block moves a value already moved ----------

# The defer block captures `b` by moving it into a local. The subsequent
# `let y = b` is a second move of the same value; init-state catches it.
fn defer_double_drop(b: Box) {
    defer { let x = b; };
    let y = b;
}

# ---------- INIT-UseAfterMove: deferred assignment moves an already-moved value ----------

# The defer body writes `b` through an `&out` pointer; the subsequent
# `let c = b` is another move of the same value.
fn defer_use_after_move(b: CopyBox, out: &out CopyBox) {
    defer out.* = b;
    let c = b;
}
